Added discord widget

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 				</ul>
 			</nav>
 		</header>
+		<br>
+		<div class="title-container">
+		<a class="good-ending">Hey, enjoy the scripts, the linkvertise links are there to support my hobby.</a>
+		</div>
 		<div class="counter-container">
 			<a href='https://www.symptoma.pt/pt/info/covid-19#info'>SARS-CoV-2</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=36ae7dcbbf25403f052e27fbd3188bb55687eb95'></script>
 			<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/870341/t/13"></script>
@@ -83,13 +87,9 @@
 			<a class="github-thing" href="https://github.com/MrWitzbold" target="_blank"><img src="./img/githublogo.png" alt="HTML tutorial" style="width:70px;height:70px;"></a>
 			<a>Follow my github!</a>
 		</div>
-
-		<br>
-		<br>
-		<a class="good-ending">Hey, enjoy the scripts, the linkvertise links are there to support my hobby.</a>
-		<br>
-
-		<audio class="music-button" src="./music/music.mp3" controls autostart="true" loop="true">
+		<audio class="music-button" src="./music/music.mp3" controls autostart="true" loop="true"></audio><br>
+		<iframe src="https://discord.com/widget?id=744002982244384860&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+		<br><br>
 	</body>
 
 </html>
