--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 		<link rel="stylesheet" href="./style.css" />
 		<link rel="icon" href="./img/logo.png">
 	</head>
-
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="JUK's website!" />
+	<meta property="og:description" content="Scripts and some other cool stuff" />
+	<meta property="og:url" content="https://mrwitzbold.github.io/jukjacker.github.io/" />
+	<meta property="og:image" content="./img/logo.png" />
 	<body style="background-color:#2d142c">
 
 		<style>
