Added logo to embed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta property="og:title" content="JUK's website!" />
 	<meta property="og:description" content="Scripts and some other cool stuff" />
 	<meta property="og:url" content="https://mrwitzbold.github.io/jukjacker.github.io/" />
-	<meta property="og:image" content="./img/logo.png" />
+	<meta property="og:image" content="https://mrwitzbold.github.io/jukjacker.github.io/img/logo.png" />
 	<body style="background-color:#2d142c">
 
 		<style>
