--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<meta property="og:url" content="https://mrwitzbold.github.io/jukjacker.github.io/" />
 	<meta property="og:image" content="https://mrwitzbold.github.io/jukjacker.github.io/img/logo.png" />
 	<body style="background-color:#2d142c">
-
 		<style>
 			/* customizable snowflake styling */
 			.snowflake {
@@ -82,17 +81,27 @@
 			<a href='https://www.symptoma.pt/pt/info/covid-19#info'>SARS-CoV-2</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=36ae7dcbbf25403f052e27fbd3188bb55687eb95'></script>
 			<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/870341/t/13"></script>
 		</div>
-		<div class="contact-stuff">
+		<br>
+		<div class="music-container">
+			<audio class="music-button" src="./music/music.mp3" controls autostart="true" loop="true"></audio>
+		</div>
+		<br>
+		<div class="contact-stuff" style="float:left;">
 			<a class="discord-thing" href="https://discord.gg/4jFcGAaq2T" target="_blank"><img src="./img/discordlogo1.png" alt="HTML tutorial" style="width:70px;height:75px;"></a>
 			<a>Contact me!</a>
 		</div>
 
-		<div class="github-div">
+		<div class="github-div" style="float:left;">
 			<a class="github-thing" href="https://github.com/MrWitzbold" target="_blank"><img src="./img/githublogo.png" alt="HTML tutorial" style="width:70px;height:70px;"></a>
 			<a>Follow my github!</a>
 		</div>
-		<audio class="music-button" src="./music/music.mp3" controls autostart="true" loop="true"></audio><br>
-		<iframe src="https://discord.com/widget?id=744002982244384860&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+
+		<div class="v3rm-div" style="float:left;">
+			<a class="v3rm-thing" href="./html/v3rm.html" target="_blank"><img src="./img/v3rmlogo.png" alt="HTML tutorial" style="width:70px;height:70px;"></a>
+			<a>Click if you're here from my game copier thread on v3rm</a>
+		</div>
+
+		<iframe style="float:right;" src="https://discord.com/widget?id=744002982244384860&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 		<br><br>
 	</body>
 
